# PIBITI

./: README.md
PibitiFront/: add_patient.html  config.js  home.html  list_all.html  list_by_cpf.html  list_options.html  login.html  register.html  style.css  update_patient.html
pibic-main/pibic-main/: .env  init_db_paciente.sql  init_db_users.sql  pyproject.toml
pibic-main/pibic-main/controllers/: controlerpatient.py
pibic-main/pibic-main/files/: X_train.csv
pibic-main/pibic-main/model_ML/: KNN.joblib  LR.joblib  NB.joblib  SVM.joblib
pibic-main/pibic-main/shareds/: crypto.py
pibic-main/pibic-main/shareds/database/: conn.py
pibic-main/pibic-main/shareds/database/comands/: pacienteService.py  userService.py
pibic-main/pibic-main/shareds/jwt/: main.py
pibiti-main/pibiti-main/: README.md  __init__.py  main.py
pibiti-main/pibiti-main/controllers/: controller_user.py
pibiti-main/pibiti-main/entities/: auth.py  paciente.py  user.py  userBase.py
pibiti-main/pibiti-main/model_ML/: DT.joblib  GB.joblib  RF.joblib
pibiti-main/pibiti-main/predictions/: predict.py
